// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quote Renders correctly 1`] = `
.c0 {
  font-size: 1.5rem;
  line-height: 150%;
  background-color: transparent;
  padding: 0;
  margin: 0;
  text-align: center;
}

.c0 small {
  font-size: 0.8rem;
  line-height: 1rem;
  margin-top: 1rem;
  display: block;
}

.c0 > hr {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c1 {
  font-style: italic;
}

@media (min-width:768px) {
  .c0 {
    font-size: 2rem;
  }
}

<blockquote
  class="c0"
>
  <hr
    class="pre-animated"
  />
  <div
    class="c1 pre-animated"
  >
    Testing Content
  </div>
  <hr
    class="pre-animated"
  />
</blockquote>
`;

exports[`Quote Renders correctly with no deviders 1`] = `
.c0 {
  font-size: 1.5rem;
  line-height: 150%;
  background-color: transparent;
  padding: 0;
  margin: 0;
  text-align: center;
}

.c0 small {
  font-size: 0.8rem;
  line-height: 1rem;
  margin-top: 1rem;
  display: block;
}

.c0 > hr {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c1 {
  font-style: italic;
}

@media (min-width:768px) {
  .c0 {
    font-size: 2rem;
  }
}

<blockquote
  class="c0"
>
  <div
    class="c1 pre-animated"
  >
    Testing Content
  </div>
</blockquote>
`;
